# sentinel-credit-risk

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml  roadmap  test_phase1.py  update_readme.py
.github/workflows/: tests.yaml
app/: main.py
data/raw/: german_credit_data.csv.dvc
docs/: model_card.md
docs/reports/: data_drift_report.html
mlruns/0/: meta.yaml
mlruns/292445309406702700/: meta.yaml
mlruns/292445309406702700/069ab853065f4c3e8bc887552b4e0532/: meta.yaml
mlruns/292445309406702700/069ab853065f4c3e8bc887552b4e0532/metrics/: accuracy  auc
mlruns/292445309406702700/069ab853065f4c3e8bc887552b4e0532/params/: alpha  eta  gamma  lambda
mlruns/292445309406702700/233255c4dde045089ae327e2db546506/: meta.yaml
mlruns/292445309406702700/466381512aa946ba90da40ce7bd5818a/: meta.yaml
mlruns/292445309406702700/7174011bf4874ce9b7c9e2f7d865bed5/: meta.yaml
mlruns/292445309406702700/7d363416d7b54bdca47cd6445bd4f343/: meta.yaml
mlruns/292445309406702700/85f281ec6733414c93b1dc712556e966/: meta.yaml
mlruns/292445309406702700/8b98b589e8484378b9d96a1b32a6395c/: meta.yaml
mlruns/292445309406702700/a01815709c3d43479fae4c6e82f42d01/: meta.yaml
mlruns/292445309406702700/a8232b11e6ff45ecb3626f2466ccd382/: meta.yaml
mlruns/292445309406702700/c47c531f04f24fde9d9ac0039128dba9/: meta.yaml
mlruns/292445309406702700/d14428fe47554f9bb542b2a23e0b9fa2/: meta.yaml
mlruns/292445309406702700/f3097b8fd0654e248ee69d44e670561f/: meta.yaml
src/: features.py  ingest.py  monitor.py  predict.py  train.py  training.py
tests/: test_model.py
(+76 files in other folders)
